# littleR

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  usage.rst
example/: config.yaml
example/project/service/: service.yaml
example/project/software/: datastore.yaml  manage.yaml
example/reports/verification/: validation_report.txt
littleR/: configuration.py  folio.py  manage.py  require_io.py  requirement.py  standard.py  tree.py  tree_filter.py  validate.py
littleR/interface/: manage.py
littleR/interface/siteR/: asgi.py  settings.py  urls.py  wsgi.py
littleR/interface/viewR/: ajax_view.py  ajax_views.py  apps.py  media.py  models.py  pdf_view.py  standard_view.py  urls.py  views.py
littleR/interface/viewR/forms/: req_forms.py
littleR/templates/littleR_req/: config.yaml  main.py
littleR/templates/new_req/: main.py
src/littleR/: context.py  folio.py  manage.py  manageR.py  requirement.py  standard.py  tree.py  tree_filter.py  validate.py
src/littleR/interface/: context.py  db.sqlite3
src/scripts/: littleR
test/: context.py  context_files.py  context_requirement.py  context_validate.py  test_folio.py  test_requirement.py  test_standard.py  test_validate.py
test/scratch/: scratch.txt
test/support/file/: corrupt.yaml  customer.yaml  duplicate.yaml  invalid_index.yaml  text.yaml  yaml.yaml
test/support/project/: service.yaml  software.yaml
test/support/project_2/: config.yaml
test/support/project_4/: config.yaml
test/support/project_5/: config.yaml
(+60 files in other folders)
